added milestone 1 and 2

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,14 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+main {
+  padding: 50px;
+}
+
+h1 {
+  margin-bottom: 30px;
+}
+
 /* header {
   position: fixed;
   left: 0px;
