--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* Generics */
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Sora", Georgia, Cambria, serif;
 }
 
 main {
